fixed overflow no scroll css issue

--- a/style/components/postThread.css
+++ b/style/components/postThread.css
@@ -1,6 +1,7 @@
 .postThreadContainer {
-    position: fixed;
-    top: 50px;
+    /* position: fixed; */
+    /* top: 50px; */
+    margin-top: 60px;
     width: 100%;
     height: 100%;
 }
@@ -25,6 +26,10 @@
     padding-top: 10px;
     padding-bottom: 10px;
     color: #154286;
+}
+
+.answersContainer {
+    height: auto;
 }
 
 .answerContainer {
